[gd_scene load_steps=33 format=3 uid="uid://23ig3bx7sp2f"]

[ext_resource type="Script" path="res://Personajes/enemigos_dinamicos/ene_camaleon.gd" id="1_4ft36"]
[ext_resource type="Texture2D" uid="uid://bgf8ndbxwfuwm" path="res://Personajes/img/Enemigos/Chameleon/Attack (84x38).png" id="2_ps6uv"]
[ext_resource type="Texture2D" uid="uid://doltb01vc3crc" path="res://Personajes/img/Enemigos/Chameleon/Idle (84x38).png" id="3_30rct"]
[ext_resource type="Texture2D" uid="uid://c8qrlmsdd6obn" path="res://Personajes/img/Enemigos/Chameleon/Run (84x38).png" id="3_sw1ba"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y7ujd"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fq0ow"]
atlas = ExtResource("2_ps6uv")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_uufex"]
atlas = ExtResource("2_ps6uv")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s41m"]
atlas = ExtResource("2_ps6uv")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjy5i"]
atlas = ExtResource("2_ps6uv")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofqsv"]
atlas = ExtResource("2_ps6uv")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv1px"]
atlas = ExtResource("2_ps6uv")
region = Rect2(420, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsi2g"]
atlas = ExtResource("2_ps6uv")
region = Rect2(504, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vctmg"]
atlas = ExtResource("2_ps6uv")
region = Rect2(588, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_20fbi"]
atlas = ExtResource("2_ps6uv")
region = Rect2(672, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_58dp4"]
atlas = ExtResource("2_ps6uv")
region = Rect2(756, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcqqx"]
atlas = ExtResource("3_30rct")
region = Rect2(0, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_u32kn"]
atlas = ExtResource("3_30rct")
region = Rect2(87, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_kduar"]
atlas = ExtResource("3_30rct")
region = Rect2(174, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h04r"]
atlas = ExtResource("3_30rct")
region = Rect2(261, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvw6x"]
atlas = ExtResource("3_30rct")
region = Rect2(348, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_er6gp"]
atlas = ExtResource("3_30rct")
region = Rect2(435, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_p48r1"]
atlas = ExtResource("3_30rct")
region = Rect2(522, 0, 87, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3miuo"]
atlas = ExtResource("3_sw1ba")
region = Rect2(0, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvvaj"]
atlas = ExtResource("3_sw1ba")
region = Rect2(84, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7d2i"]
atlas = ExtResource("3_sw1ba")
region = Rect2(168, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v5sf"]
atlas = ExtResource("3_sw1ba")
region = Rect2(252, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7xcw"]
atlas = ExtResource("3_sw1ba")
region = Rect2(336, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dth"]
atlas = ExtResource("3_sw1ba")
region = Rect2(420, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsqlk"]
atlas = ExtResource("3_sw1ba")
region = Rect2(504, 0, 84, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_81r1b"]
atlas = ExtResource("3_sw1ba")
region = Rect2(588, 0, 84, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_73d8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq0ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uufex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s41m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjy5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofqsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv1px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsi2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vctmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20fbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58dp4")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcqqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u32kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kduar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h04r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvw6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er6gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p48r1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3miuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvvaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7d2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v5sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7xcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1dth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsqlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81r1b")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nknw3"]
radius = 24.0

[node name="ene_camaleon" type="CharacterBody2D" groups=["enemigo"]]
script = ExtResource("1_4ft36")
metadata/_edit_group_ = true

[node name="col_camaleon" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
shape = SubResource("CircleShape2D_y7ujd")

[node name="ani_camaleon" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(23.5, 27)
scale = Vector2(-1, 1.115)
sprite_frames = SubResource("SpriteFrames_73d8e")
animation = &"idle"
frame_progress = 0.275869

[node name="area_camaleon" type="Area2D" parent="."]

[node name="col_area_camaleon" type="CollisionShape2D" parent="area_camaleon"]
position = Vector2(0, 32)
shape = SubResource("CircleShape2D_nknw3")

[node name="detector_derecho" type="RayCast2D" parent="."]
position = Vector2(24, 24)
target_position = Vector2(376, 0)

[node name="detector_derechoAbajo" type="RayCast2D" parent="."]
position = Vector2(24, 40)
target_position = Vector2(0, 64)

[node name="detector_izquierdo" type="RayCast2D" parent="."]
position = Vector2(-24, 24)
target_position = Vector2(-80, 0)

[connection signal="body_entered" from="area_camaleon" to="." method="_on_area_camaleon_body_entered"]
